# ctrlset

./: .gitignore  Cargo.toml  README.md  log
ctrlset_cli/: Cargo.toml
ctrlset_cli/src/: file_handler.rs  lib.rs  main.rs
ctrlset_gui/: Cargo.toml
ctrlset_gui/src/: main.rs
src/: main.rs
