[package]
name = "ctrlset"
version = "0.1.0"
edition = "2021"

# rdev and its platform-specific dependencies are no longer needed.
[dependencies]
toml = "0.8"
rfd = "0.14"
eframe = "0.27.2"
directories = "5.0"
egui = "0.27.2"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19.0"                               # Still useful for other statics if needed, but not for the listener.
