[package]
name = "ctrlset_cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "ctrlset_cli"
path = "src/lib.rs"

[[bin]]
name = "ctrlset_cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
directories = "6.0.0"
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
